* Add color options for folders and index screen.  * Add silent token to display filter  * Add option to preserve To: and Cc: fields on replies.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,23 @@ imapd
 pop3d
 pop2d
 mailutil
+ipopd
+mlock
+mtest
+tmail
+c-client
+helptext*
+help_*gen
+*orig
+*patch
+*log
+*status
+OSTYPE
+SPECIALS
+.deps
+libtool
+po/
+imap/an
+dmail
+imap/ip6
+include/
