* Changes to configure.ac to add -lkrb5 to the link   * Changes to avoud errors in compilation when -Wformat-security is used   * Remove RFC files from source code

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ wpcomm*
 web/*/*/alpined
 web/*/*/alpineldap
 .gitignore
+local.c
+autom4te.cache/output.0
+autom4te.cache/output.1
+autom4te.cache/traces.0
+autom4te.cache/traces.1
+
