--- a/web/src/Makefile.in
+++ b/web/src/Makefile.in
@@ -55,6 +55,11 @@ am__aclocal_m4_deps = $(top_srcdir)/m4/acx_pthread.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
 	$(top_srcdir)/m4/nls.m4 $(top_srcdir)/m4/po.m4 \
 	$(top_srcdir)/m4/progtest.m4 $(top_srcdir)/VERSION \
+	$(top_srcdir)/VERSION $(top_srcdir)/VERSION \
+	$(top_srcdir)/VERSION $(top_srcdir)/VERSION \
+	$(top_srcdir)/VERSION $(top_srcdir)/VERSION \
+	$(top_srcdir)/VERSION $(top_srcdir)/VERSION \
+	$(top_srcdir)/VERSION $(top_srcdir)/VERSION \
 	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
