--- a/web/src/pubcookie/Makefile.in
+++ b/web/src/pubcookie/Makefile.in
@@ -167,6 +167,7 @@ LIBINTL = @LIBINTL@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
 LIPO = @LIPO@
 LN = @LN@
 LN_S = @LN_S@
