* Update to version 2.19.3   * Alpine computes the signature of a signed message on a different message than the one     it sends, because of this, messages that are sent can not be validated either in the     sent-mail folder, nor in the server that receives such message.

--- a/configure.ac
+++ b/configure.ac
@@ -85,7 +85,7 @@ if test x$enable_dmalloc = "xyes" ; then
   AC_DEFINE(ENABLE_DMALLOC, 1, [Define enable dmalloc debugging])
 fi
 
-dnl set locale. Mac is special so we deal with it separately.
+dnl Set default locale dir.
 case $host in
     *apple-darwin*)
       if test -d /opt/local ; then
@@ -93,6 +93,9 @@ case $host in
       else
 	localedir="\${datadir}/locale"
       fi
+      ;;
+    *-*-cygwin)
+	localedir="/usr/share"
       ;;
     *)  
       localedir="\${datadir}/locale"
