* new address alpine-count@patches.freeiz.com for counting users of     Alpine.   * When writing the .pinerc file, lines could not be longer than     10,000 characters, or else this caused corruption in the .pinerc data.     Now they are allowed to be of any size.   * Fix a problem that made Alpine remove files before they were open by     the viewer. It requires that the user has an equivalent to a command     such as "ps auxww" to list the list of processes. The default is     "/bin/ps auxww", but it can be changed at compile time with the option     --with-ps-cmd.   * Remove -lregex from linker flags when building --with-supplied-regex.   * Fix _INIT_ token for reply quote string to include support for 8-bit     in personal names.

--- a/alpine/osdep/mswin.rc
+++ b/alpine/osdep/mswin.rc
@@ -267,12 +267,12 @@ BEGIN
 #else
             VALUE "FileDescription", "Alpine\0"
 #endif
-            VALUE "FileVersion", "2.19.3VALUE "FileVersion", "2.19.3VALUE "FileVersion", "2.11\0"" "alpine 2.19.3"" "alpine 2.19.3"
+            VALUE "FileVersion", "2.19.3\0"
             VALUE "InternalName", "alpine\0"
             VALUE "LegalCopyright", "Copyright 2006-2009\0"
             VALUE "OriginalFilename", "alpine.exe\0"
             VALUE "ProductName", "alpine\0"
-            VALUE "ProductVersion", "2.19.3VALUE "ProductVersion", "2.19.3VALUE "ProductVersion", "2.11\0"" "alpine 2.19.3"" "alpine 2.19.3"
+            VALUE "ProductVersion", "2.19.3\0"
         END
     END
     BLOCK "VarFileInfo"
